add some fake data

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -50,3 +50,7 @@ body {
     padding: 10px;
     border: 1px solid grey;
 }
+
+.entity-table tr:nth-child(even) {
+    background-color: #cecece;
+}
