--- a/templates/employees_vaccines.html
+++ b/templates/employees_vaccines.html
@@ -48,5 +48,21 @@
         <td>1</td>
         <td><button>Delete</button></td>
     </tr>
+    <tr>
+        <td>2</td>
+        <td>1</td>
+        <td>2</td>
+        <td>2022-02-01</td>
+        <td>2</td>
+        <td><button>Delete</button></td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>1</td>
+        <td>2</td>
+        <td>2022-03-01</td>
+        <td>3</td>
+        <td><button>Delete</button></td>
+    </tr>
 </table>
 {% endblock %}
