--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-<h1 class="page-title">Covid-19 Vaccine Mandate Database Index</h1>
+<h1 class="page-title">Covid-19 Vaccine Mandate Database Home</h1>
 <p class="description">Welcome to the Covid-19 Vaccine Mandate Database.</p>
 <ul id="nav-list">
     <li><a href="/employees" class="page-link">Employees</a>
