--- a/templates/main.html
+++ b/templates/main.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="navbar">
-            <a href="/" class="nav">Index</a>
+            <a href="/" class="nav">Home</a>
             <a href="/employees" class="nav">Employees</a>
             <a href="/worksites" class="nav">Worksites</a>
             <a href="/exemptions" class="nav">Exemptions</a>
