fix radio buttons

--- a/templates/employees.html
+++ b/templates/employees.html
@@ -19,9 +19,9 @@
         <input type="date" id="birthdate"/>
         <br>
         <label>Termed: </label>
-        <input type="radio" id="true" value="1">
+        <input type="radio" id="true" name="termed" value="1">
         <label for="true">True</label>
-        <input type="radio" id="false" value="0">
+        <input type="radio" id="false" name="termed" value="0">
         <label for="false">False</label><br>
         <label for="site">Site ID: </label>
         <input type="text" id="site"/><br>
