--- a/templates/employees_vaccines.html
+++ b/templates/employees_vaccines.html
@@ -19,13 +19,13 @@
         <input type="date" id="date"/>
         <br>
         <label>Dose: </label>
-        <input type="radio" id="1" value="1">
+        <input type="radio" id="1" name="dose" value="1">
         <label for="1">1st</label>
-        <input type="radio" id="2" value="2">
+        <input type="radio" id="2" name="dose" value="2">
         <label for="2">2</label>
-        <input type="radio" id="3" value="3">
+        <input type="radio" id="3" name="dose" value="3">
         <label for="3">Booster</label>
-        <input type="radio" id="0" value="0">
+        <input type="radio" id="0" name="dose" value="0">
         <label for="0">Unknown</label>
         <br>
         <input type="submit" id="emp_vacc-submit">
