--- a/templates/exemptions.html
+++ b/templates/exemptions.html
@@ -13,9 +13,9 @@
         <input type="text" id="exemptionid"/>
         <br>
         <label>Status: </label>
-        <input type="radio" id="true" value="1">
+        <input type="radio" id="true" name="status" value="1">
         <label for="true">has exemption</label>
-        <input type="radio" id="false" value="0">
+        <input type="radio" id="false" name="status" value="0">
         <label for="false">no exemption</label><br>
         <label for="type">Exemption Type: </label>
         <input type="text" id="type"/><br>
