--- a/templates/employees_vaccines.html
+++ b/templates/employees_vaccines.html
@@ -9,11 +9,16 @@
 <form>
     <fieldset class="add-entity">
         <legend>Add Employee-Vaccine</legend>
-        <label for="empid">Employee ID: </label>
-        <input type="text" id="empid"/>
+        <label>Employee ID: </label>
+        <select name="empid">
+            <option value="1">1</option>
+        </select>
         <br>
-        <label for="vaccid">Vaccine ID: </label>
-        <input type="text" id="vaccid"/>
+        <label>Vaccine ID: </label>
+        <select name="vaccid">
+            <option value="1">1</option>
+            <option value="2">2</option>
+        </select>
         <br>
         <label for="date">Date Administered: </label>
         <input type="date" id="date"/>
