--- a/templates/worksites.html
+++ b/templates/worksites.html
@@ -42,6 +42,13 @@
         <td>John</td>
         <td>Doe</td>
     </tr>
+     <tr>
+        <td>2</td>
+        <td>Midlothian</td>
+        <td>Factory</td>
+        <td>Jane</td>
+        <td>Doe</td>
+    </tr>
 </table>
 
 {% endblock %}
