--- a/templates/employees.html
+++ b/templates/employees.html
@@ -23,10 +23,15 @@
         <label for="true">True</label>
         <input type="radio" id="false" name="termed" value="0">
         <label for="false">False</label><br>
-        <label for="site">Site ID: </label>
-        <input type="text" id="site"/><br>
-        <label for="exemption">Exemption ID: </label>
-        <input type="text" id="exemption"/><br>
+        <label>Site ID: </label>
+        <select name="site">
+            <option value="1">1</option>
+            <option value="2">2</option>
+        </select><br>
+        <label>Exemption ID: </label>
+        <select name="exemption">
+            <option value="1">1</option>
+        </select><br>
         <input type="submit" id="employee-submit">
     </fieldset>
 </form>
