--- a/templates/employees_vaccines.html
+++ b/templates/employees_vaccines.html
@@ -36,6 +36,14 @@
         <input type="submit" id="emp_vacc-submit">
     </fieldset>
 </form>
+<form id="search-form">
+    <p>Search by Employee ID: </p>
+    <select name="id">
+        <option value="1">1</option>
+    </select>
+    <br>
+    <input type="submit" value="Search" id="search-submit">
+</form>
 <table class="entity-table">
     <thead>
         <th>ID</th>
